# SmartWatch

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/PCF85063/: PCF85063.c
components/PCF85063/include/: PCF85063.h
components/Screen/: Screen.c
components/Screen/include/: Screen.h
main/: CMakeLists.txt  hello_world_main.c  idf_component.yml
main/inc/: BLE.h  HeadFiles.h  Init_Task.h  Key.h  RTC_Task.h  gatt_svc.h
main/src/: BLE.c  Init_Task.c  Key.c  RTC_Task.c  gap.c  gatt_svc.c
